Add configuration for Genesis emulator

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -158,6 +158,10 @@ emulator:
         mame:
           lib: fbneo_libretro
           roms: [ "zip" ]
+        genesis:
+          lib: genesis_plus_gx_libretro
+          config: genesis_plus_gx_libretro.cfg
+          roms: [ "md" ]
         nes:
           lib: nestopia_libretro
           roms: [ "nes" ]
