--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -270,6 +270,7 @@ webrtc:
   # a list of STUN/TURN servers to use
   iceServers:
     - url: stun:stun.l.google.com:19302
+    - url: stun:stun4.l.google.com:19302
   # configures whether the ice agent should be a lite agent (true/false)
   # (performance)
   # don't use iceServers when enabled
