--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -214,6 +214,7 @@ webrtc:
   # a list of STUN/TURN servers for the client
   iceServers:
     - url: stun:stun.l.google.com:19302
+    - url: stun:stun4.l.google.com:19302
   # instead of random unlimited port range for
   # WebRTC UDP connections, these params
   # define ICE candidates port range explicitly
