Create default saves for each shift

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -105,7 +105,7 @@ emulator:
 
   # save directory for emulator states
   # special tag {user} will be replaced with current user's home dir
-  storage: "{user}/.cr/save"
+  storage: assets/saves
 
   libretro:
     # use zip compression for emulator save states
