Misc changes performed mid-run

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -144,20 +144,10 @@ emulator:
         gba:
           lib: mgba_libretro
           roms: [ "gba", "gbc" ]
-        pcsx:
-          lib: pcsx_rearmed_libretro
-          roms: [ "cue" ]
-          # example of folder override
-          folder: psx
-        # MAME core requires additional manual setup, please read:
-        # https://docs.libretro.com/library/fbneo/
-        mame:
-          lib: fbneo_libretro
-          roms: [ "zip" ]
         genesis:
           lib: genesis_plus_gx_libretro
           config: genesis_plus_gx_libretro.cfg
-          roms: [ "md" ]
+          roms: [ "md", "cue" ]
         nes:
           lib: nestopia_libretro
           roms: [ "nes" ]
@@ -165,13 +155,6 @@ emulator:
           lib: snes9x_libretro
           roms: [ "smc", "sfc", "swc", "fig", "bs" ]
           hasMultitap: true
-        n64:
-          lib: mupen64plus_next_libretro
-          altRepo: true
-          config: mupen64plus_next_libretro.cfg
-          roms: [ "n64", "v64", "z64" ]
-          isGlAllowed: true
-          usesLibCo: true
 
 encoder:
   audio:
@@ -216,8 +199,8 @@ webrtc:
   # WebRTC UDP connections, these params
   # define ICE candidates port range explicitly
   icePorts:
-    min:
-    max:
+    min: 15000
+    max: 16999
   # override ICE candidate IP, see: https://github.com/pion/webrtc/issues/835,
   # can be used for Docker bridged network internal IP override
   iceIpMap:
