--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,8 +3,9 @@
 #
 
 coordinator:
-  # address if the server want to connect directly to debug
-  debugHost:
+  # debugging switch
+  #   - allows selecting worker instances
+  debug: false
   # games library
   library:
     # some directory which is gonna be the root folder for the library
@@ -28,6 +29,13 @@ coordinator:
     profilingEnabled: false
     metricEnabled: false
     urlPrefix: /coordinator
+  # a custom Origins for incoming Websocket connections:
+  # "" -- checks same origin policy
+  # "*" -- allows all
+  # "your address" -- checks for that address
+  origin:
+    userWs:
+    workerWs:
   # HTTP(S) server config
   server:
     address: :8000
@@ -77,6 +85,8 @@ worker:
       # Own certs config
       httpsCert:
       httpsKey:
+  # optional server tag
+  tag:
 
 emulator:
   # set output viewport scale factor
@@ -90,11 +100,16 @@ emulator:
     width: 320
     height: 240
 
+  # enable autosave for emulator states if set to a non-zero value of seconds
+  autosaveSec: 0
+
   # save directory for emulator states
   # special tag {user} will be replaced with current user's home dir
   storage: assets/saves
 
   libretro:
+    # use zip compression for emulator save states
+    saveCompression: false
     cores:
       paths:
         libs: assets/cores
@@ -127,6 +142,7 @@ emulator:
       #   - based on the rom names in the roms param
       #
       # Available config params:
+      #   - altRepo (bool) prioritize secondary repo as the download source
       #   - lib (string)
       #   - config (string)
       #   - roms ([]string)
@@ -148,6 +164,11 @@ emulator:
           lib: genesis_plus_gx_libretro
           config: genesis_plus_gx_libretro.cfg
           roms: [ "md", "cue" ]
+        # MAME core requires additional manual setup, please read:
+        # https://docs.libretro.com/library/fbneo/
+        mame:
+          lib: fbneo_libretro
+          roms: [ "zip" ]
         nes:
           lib: nestopia_libretro
           roms: [ "nes" ]
@@ -155,6 +176,13 @@ emulator:
           lib: snes9x_libretro
           roms: [ "smc", "sfc", "swc", "fig", "bs" ]
           hasMultitap: true
+        n64:
+          lib: mupen64plus_next_libretro
+          altRepo: true
+          config: mupen64plus_next_libretro.cfg
+          roms: [ "n64", "v64", "z64" ]
+          isGlAllowed: true
+          usesLibCo: true
 
 encoder:
   audio:
@@ -187,20 +215,70 @@ encoder:
   # (experimental)
   withoutGame: false
 
+# game recording
+# (experimental)
+# recording allows export RAW a/v streams of games
+# by default, it will export audio as WAV files,
+# video as a list of PNG-encoded images, and
+# one additional FFMPEG concat demux file
+recording:
+  enabled: false
+  # image compression level:
+  #   0 - default compression
+  #	 -1 - no compression
+  #	 -2 - best speed
+  #	 -3 - best compression
+  compressLevel: 0
+  # name contains the name of the recording dir (or zip)
+  # format:
+  # %date:go_time_format% -- refer: https://go.dev/src/time/format.go
+  # %user% -- user name who started the recording
+  # %game% -- game name (game ROM name)
+  # %rand:len% -- a random string of given length
+  # as example: 20210101101010_yeE_user1_badApple
+  name: "%date:20060102150405%_%rand:3%_%user%_%game%"
+  # zip and remove recording dir on completion
+  zip: true
+  # save directory
+  folder: ./recording
+
+storage:
+  # cloud storage provider:
+  #   - empty (No op storage stub)
+  #   - oracle [Oracle Object Storage](https://www.oracle.com/cloud/storage/object-storage.html)
+  provider:
+  # this value contains arbitrary key attribute:
+  #   - oracle: pre-authenticated URL (see: https://docs.oracle.com/en-us/iaas/Content/Object/Tasks/usingpreauthenticatedrequests.htm)
+  key:
+
 webrtc:
-  # turn off default Pion interceptors for performance reasons
-  # (experimental)
-  disableDefaultInterceptors:
-  # a list of STUN/TURN servers for the client
+  # turn off default Pion interceptors (see: https://github.com/pion/interceptor)
+  # (performance)
+  disableDefaultInterceptors: true
+  # indicates the role of the DTLS transport (see: https://github.com/pion/webrtc/blob/master/dtlsrole.go)
+  # (debug)
+  #  - (default)
+  #  - 1 (auto)
+  #  - 2 (client)
+  #  - 3 (server)
+  dtlsRole:
+  # a list of STUN/TURN servers to use
   iceServers:
     - url: stun:stun.l.google.com:19302
-    - url: stun:stun4.l.google.com:19302
-  # instead of random unlimited port range for
-  # WebRTC UDP connections, these params
-  # define ICE candidates port range explicitly
+  # configures whether the ice agent should be a lite agent (true/false)
+  # (performance)
+  # don't use iceServers when enabled
+  iceLite: false
+  # ICE configuration
+  # by default, ICE ports are random and unlimited
+  # alternatives:
+  #   1. instead of random unlimited port range for
+  #   WebRTC connections, these params limit port range of ICE connections
   icePorts:
     min: 15000
     max: 16999
+  #  2. select a single port to forward all ICE connections there
+  singlePort:
   # override ICE candidate IP, see: https://github.com/pion/webrtc/issues/835,
   # can be used for Docker bridged network internal IP override
   iceIpMap:
